# AngouriMathLab

./: .gitignore  CMakeLists.txt  Dockerfile  NuGet.config  README.md  Try.sln  articles.md  main.cpp  we-thank.md
.github/workflows/: Build.yml  BuildRunSample.yml  Integration.yml  nuget.yml
AMTerminal/: AMTerminal.sln
AMTerminal/AMTerminal/: AMTerminal.csproj  ArgumentParser.cs  NotebookStyleConsole.cs  Program.cs
AngouriGamma/: AngouriGamma.csproj  App.xaml  App.xaml.cs  GUILimit.cs  GUISimplifier.cs  GUISolver.cs  MainWindow.xaml  MainWindow.xaml.cs  Render.cs
notebooks/: C# example.ipynb  F# example with plotting.ipynb  HelloBook.AngouriMath.Interactive.ipynb  Sample.CSharp.ipynb  Sample.FSharp.ipynb  Sample.ipynb
